--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
 
 					<div id="main">
 						<div class="inner">
-							<div class="col-xs-12 center-items">
-								<input class=" datepicker" placeholder="30/07/1994">
+							<div class="col-xs-12 ">
+								<div class="row center-items">Select Date</div>
+								<div class="row center-items">
+									<input class=" datepicker" style="padding-left: 15px" placeholder="30/07/1994">
 								</div>
+							</div>
 							</div>
 					</div>
 
