--- a/index.html
+++ b/index.html
@@ -25,22 +25,24 @@
 						<div class="inner">
 
 							<!-- Logo -->
+							<div class="center-items">
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Life In Weeks</span>
+									<h1><span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Life In Weeks</span></h1>
 								</a>
+							</div>
 
 							<!-- Nav -->
-								<nav>
+								<!--<nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
-								</nav>
+								</nav>-->
 
 						</div>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!--<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -49,7 +51,7 @@
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-					</nav>
+					</nav>-->
 
 				<!-- Main -->
 					<!--<div id="main">
@@ -66,14 +68,38 @@
 					</div>-->
 
 					<div id="main">
-						<div class="inner">
-							<div class="col-xs-12 ">
-								<div class="row center-items">Select Date</div>
-								<div class="row center-items">
-									<input class=" datepicker" style="padding-left: 15px" placeholder="30/07/1994">
-								</div>
+							<div class="col-md-4 col-xs-12">
+									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Select Birth Date</h4>
+									<div class="col-xs-12 center-items">
+										<input id="datepicker" style="padding-left: 15px" placeholder="30/07/1994">
+									</div>
 							</div>
+							<div class="col-md-4 col-xs-12">
+									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Expected Age</h4>
+									<div class="col-xs-12 center-items">
+										<input id="expected-age" style="padding-left: 15px" placeholder="80">
+									</div>
 							</div>
+							<div class="col-md-4 col-xs-12">
+									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Expected Age</h4>
+									<div class="col-xs-12 center-items">
+										<input class="expected-age" style="padding-left: 15px" placeholder="80">
+									</div>
+							</div>
+
+
+							<br>
+							<br>
+
+							<div class="col-xs-12">
+									
+
+									<div id="container"></div>
+							</div>
+
+
+
+
 					</div>
 
 				<!-- Footer -->
@@ -107,7 +133,7 @@
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/populate.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-			<script src="https://unpkg.com/moment" />
+			<script src="https://unpkg.com/moment"></script>
 
 
 	</body>
