Return double digits

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<br>
 							<br>
 
-							<div class="col-xs-12">
+							<div class="col-xs-12 custom-no-padding" >
 									
 
 									<div id="container"></div>
