--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 					</div>-->
 
 					<div id="main">
+						<div class="inner">
 							<div class="col-md-4 col-xs-12">
 									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Select Birth Date</h4>
 									<div class="col-xs-12 center-items">
@@ -92,18 +93,13 @@
 							<br>
 
 							<div class="col-xs-12 custom-no-padding" >
-									
-
 									<div id="container"></div>
 							</div>
-
-
-
-
+						</div>
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<footer id="footer" style="padding-top:100px">
 						<div class="inner">
 						
 							<section>
