--- a/index.html
+++ b/index.html
@@ -48,21 +48,20 @@
 					<div id="main">
 						<div class="inner">
 							<div class="col-md-4 col-xs-12">
-									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Select Birth Date</h4>
+									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Select Birth Date</h2>
 									<div class="col-xs-12 center-items">
 										<input id="datepicker" style="padding-left: 15px" placeholder="30/07/1994">
 									</div>
 							</div>
 							<div class="col-md-4 col-xs-12">
-									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Expected Age</h4>
+									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Expected Age</h2>
 									<div class="col-xs-12 center-items">
 										<input id="expected-age" style="padding-left: 15px" placeholder="80">
 									</div>
 							</div>
 							<div class="col-md-4 col-xs-12">
-									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Expected Age</h4>
-									<div class="col-xs-12 center-items">
-										<input class="expected-age" style="padding-left: 15px" placeholder="80">
+								<div class="col-xs-12 center-items">
+								<button class="center-items" id="submit-button">Submit</button>
 									</div>
 							</div>
 
@@ -83,10 +82,12 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://shubhankar30.in" class="icon style2 fa-user-circle"><span class="label">Profile</span></a></li>
+									<li><a href="https://www.linkedin.com/in/shubhankar300794/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.facebook.com/30shubhankar" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://instagram.com/shubhankar30" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/shubhankar30" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://gitlab.com/shubhankar30" class="icon style2 fa-gitlab"><span class="label">Gitlab</span></a></li>
 									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
