--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							<!-- Logo -->
 							<div class="center-items">
 								<a href="index.html" class="logo">
-									<h1><span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Life In Weeks</span></h1>
+									<h1><span class="symbol"><img src="images/logo2.svg" alt="" /></span><span class="title">Life In Weeks</span></h1>
 								</a>
 							</div>
 
