--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 							<!-- Logo -->
 							<div class="center-items">
 								<a href="index.html" class="logo">
-									<h1><span class="symbol"><img src="images/logo2.svg" alt="" /></span><span class="title">Life In Weeks</span></h1>
+									<h1><span class="title">Life In Weeks</span>
+										</h1>
 								</a>
 							</div>
 
@@ -48,22 +49,24 @@
 					<div id="main">
 						<div class="inner">
 							<div class="col-md-4 col-xs-12">
-									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Select Birth Date</h2>
-									<div class="col-xs-12 center-items">
-										<input id="datepicker" style="padding-left: 15px" placeholder="30/07/1994">
-									</div>
+									<h3 class="col-xs-12 center-items" style="margin-bottom:0px">Birth Date
+											<input id="datepicker" style="padding-left: 15px;width:100px" placeholder="30/07/1994">
+
+									</h3>
 							</div>
 							<div class="col-md-4 col-xs-12">
-									<h2 class="col-xs-12 center-items" style="margin-bottom:0px">Expected Age</h2>
-									<div class="col-xs-12 center-items">
-										<input id="expected-age" style="padding-left: 15px" placeholder="80">
-									</div>
+									<h3 class="col-xs-12 center-items" style="margin-bottom:0px">Expected Age
+											<input id="expected-age" style="padding-left: 15px;width:100px" placeholder="80">
+
+									</h3>
+									
 							</div>
 							<div class="col-md-4 col-xs-12">
 								<div class="col-xs-12 center-items">
 								<button class="center-items" id="submit-button">Submit</button>
 									</div>
 							</div>
+							<div class="symbol center-items col-xs-12"><img src="images/logo2.svg" alt="" /></div>
 
 
 							<br>
@@ -82,9 +85,9 @@
 					<footer id="footer" style="padding-top:50px;">
 						<div class="inner">
 						
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
+							<div class="col-xs-12">
+								<h2 class="center-items">Follow</h2>
+								<ul class="icons center-items">
 									<li><a href="https://shubhankar30.in" class="icon style2 fa-user-circle"><span class="label">Profile</span></a></li>
 									<li><a href="https://www.linkedin.com/in/shubhankar300794/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://www.facebook.com/30shubhankar" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
@@ -93,9 +96,9 @@
 									<li><a href="https://gitlab.com/shubhankar30" class="icon style2 fa-gitlab"><span class="label">Gitlab</span></a></li>
 									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Shubhankar Ranade</li>
+							</div>
+							<ul class="copyright center-items">
+								<li style="color:black!important">&copy; Shubhankar Ranade</li>
 							</ul>
 						</div>
 					</footer>
