--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
 									
 							</div>
 							<div class="col-md-4 col-xs-12">
-								<div class="col-xs-12 center-items">
-								<button class="center-items" id="submit-button">Submit</button>
-									</div>
+								<h3 class="col-xs-12 center-items"> Ideal age
+									<input type="checkbox" name="ideal-age" id="ideal-age" style="opacity:1;z-index:1"> 
+								</h3>
 							</div>
+							<div class="center-items col-xs-12">
+								<button id="submit-button">Submit</button>
+						</div>
 							<div class="symbol center-items col-xs-12"><img src="images/logo2.svg" alt="" /></div>
 
 
