--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
 
 							<br>
 							<br>
+							<div class="chart-ages">
+								<div class="square-icon early-age"></div>Early Years<br>
+								<div class="square-icon  school-age"></div>School<br>
+								<div class="square-icon  college-age"></div>College<br>
+								<div class="square-icon  career-age"></div>Carrer<br>
+								<div class="square-icon  retirement-age"></div>Retirement<br>
+							  </div>
+
 
 							<div class="col-xs-12 custom-no-padding" >
 									<div id="container"></div>
