--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+		google_ad_client: "ca-pub-8150935700025033",
+		enable_page_level_ads: true
+	  });
+	</script>
+
 </head>
 <body class="is-preload">
 		<!-- Wrapper -->
