Add input check

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script>
 	  (adsbygoogle = window.adsbygoogle || []).push({
 		google_ad_client: "ca-pub-8150935700025033",
 		enable_page_level_ads: true
 	  });
-	</script>
+	</script>-->
 
 </head>
 <body class="is-preload">
@@ -59,7 +59,7 @@
 						<div class="inner">
 							<div class="col-md-4 col-xs-12">
 									<h3 class="col-xs-12 center-items" style="margin-bottom:0px">Birth Date
-											<input id="datepicker" style="padding-left: 15px;width:100px" placeholder="30/07/1994">
+											<input id="datepicker" style="padding-left: 15px;width:100px">
 
 									</h3>
 							</div>
