--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 							<br>
 							<br>
-							<div class="chart-ages">
+							<div id="chart-ages" style="display:none">
 								<div class="square-icon early-age"></div>Early Years<br>
 								<div class="square-icon  school-age"></div>School<br>
 								<div class="square-icon  college-age"></div>College<br>
