Fix checkbox and date setting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+		 (adsbygoogle = window.adsbygoogle || []).push({
+			  google_ad_client: "ca-pub-8150935700025033",
+			  enable_page_level_ads: true
+		 });
+	</script>
 	<!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script>
 	  (adsbygoogle = window.adsbygoogle || []).push({
@@ -76,7 +82,8 @@
 								</h3>
 							</div>
 							<div class="center-items col-xs-12">
-								<button id="submit-button">Submit</button>
+								
+								
 						</div>
 							<div class="symbol center-items col-xs-12"><img src="images/logo2.svg" alt="" /></div>
 
