Change jquery to vanilla

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 		enable_page_level_ads: true
 	  });
 	</script>-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125992496-3"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-125992496-3');
+	</script>
 
 </head>
 <body class="is-preload">
@@ -63,20 +72,20 @@
 
 					<div id="main">
 						<div class="inner">
-							<div class="col-md-4 col-xs-12">
+							<div class="col-md-6 col-xs-12">
 									<h3 class="col-xs-12 center-items" style="margin-bottom:0px">Birth Date
 											<input id="datepicker" style="padding-left: 15px;width:100px">
 
 									</h3>
 							</div>
-							<div class="col-md-4 col-xs-12">
+							<!-- <div class="col-md-4 col-xs-12">
 									<h3 class="col-xs-12 center-items" style="margin-bottom:0px">Expected Age
 											<input id="expected-age" style="padding-left: 15px;width:100px" placeholder="80">
 
 									</h3>
 									
-							</div>
-							<div class="col-md-4 col-xs-12">
+							</div> -->
+							<div class="col-md-6 col-xs-12">
 								<h3 class="col-xs-12 center-items"> Ideal age
 									<input type="checkbox" name="ideal-age" id="ideal-age" style="opacity:1;z-index:1"> 
 								</h3>
@@ -94,7 +103,7 @@
 								<div class="square-icon early-age"></div>Early Years<br>
 								<div class="square-icon  school-age"></div>School<br>
 								<div class="square-icon  college-age"></div>College<br>
-								<div class="square-icon  career-age"></div>Carrer<br>
+								<div class="square-icon  career-age"></div>Career<br>
 								<div class="square-icon  retirement-age"></div>Retirement<br>
 							  </div>
 
