Fix touchstart issue mobile

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							</div>
 							<div class="col-xs-12 display-for-mobile">
 								<div class="center-items custom-mobile-padding">
-								<button id="submit-button" class="button primary" style="margin-left:20px">Submit</button>
+								<button id="submit-button" class="button primary" style="margin-left:20px" onclick="populateFunction();">Submit</button>
 							</div>
 							</div>
 							<div class="col-md-6 col-xs-12 custom-mobile-padding">
