--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
 
 							<!-- Logo -->
 							<div class="center-items">
-								<a href="index.html" class="logo">
 
 									<h1 class="col-xs-12">
 											<div class="symbol center-items "><img src="images/logo2.svg" alt="" /></div>
-											<span class="title">Life In Weeks</span>
-										</h1>
-								</a>
+											<span class="title col-xs-12 center-items">Life In Weeks</span>
+										</h1>								
+							</div>
+							<div class="col-xs-12">
+								<p class="center-items">This would visually help give meaning to the phrase <strong>"Life is short so make the most of it".</strong> This is a grid of 4160 blocks where each block represents one week of your life. Each row represents one year and each row contains 52 columns. </p>
+								<p class="center-items">Just enter your birth date and press submit.</p>								
 							</div>
 
 							<!-- Nav -->
@@ -126,7 +128,7 @@
 					<footer id="footer" style="padding-top:50px;">
 						<div class="inner">
 						
-							<div class="col-xs-12">
+							<div class="col-xs-12" style="margin-top:30px;">
 								<h2 class="center-items">Follow</h2>
 								<ul class="icons center-items">
 									<li><a href="https://shubhankar30.in" class="icon style2 fa-user-circle"><span class="label">Profile</span></a></li>
