--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 							<div class="center-items">
 
 									<h1 class="col-xs-12">
-											<div class="symbol center-items "><img src="images/logo2.svg" alt="" /></div>
+											<div class="symbol center-items "><img id="logo-id" alt="" /></div>
 											<span class="title col-xs-12 center-items">Life In Weeks</span>
 										</h1>								
 							</div>
 							<div class="col-xs-12">
-								<p class="center-items">This would visually help give meaning to the phrase <strong>"Life is short so make the most of it".</strong> This is a grid of 4160 blocks where each block represents one week of your life. Each row represents one year and each row contains 52 columns. </p>
+								<p class="center-items">This would visually help give meaning to the phrase "Life is short so make the most of it". This is a grid of 4160 blocks where each block represents one week of your life. Each row represents one year and each row contains 52 columns. </p>
 								<p class="center-items">Just enter your birth date and press submit.</p>								
 							</div>
 
