--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script>
 		 (adsbygoogle = window.adsbygoogle || []).push({
@@ -49,7 +50,8 @@
 										</h1>								
 							</div>
 							<div class="col-xs-12">
-								<p class="center-items">This would visually help give meaning to the phrase "Life is short so make the most of it". This is a grid of 4160 blocks where each block represents one week of your life. Each row represents one year and each row contains 52 columns. </p>
+								<p class="center-items">This would visually help give meaning to the phrase "Life is short so make the most of it". </p>
+								<p class="center-items">	This is a grid of 4160 blocks where each block represents one week of your life. Each row represents one year and each row contains 52 columns. </p>
 								<p class="center-items">Just enter your birth date and press submit.</p>								
 							</div>
 
