Add books and articles

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="quotes.html">Quotes</a></li>
-						
+							<li><a href="articles.html">Articles</a></li>
+							<li><a href="books.html">Books</a></li>
+							<li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
 
