Change image size

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
 							<!-- Logo -->
 							<div class="center-items">
-
 									<h1 class="col-xs-12">
-											<div class="symbol center-items "><img id="logo-id" alt="" /></div>
+											<div class="symbol center-items "><img id="logo-id" alt="" style="width:300px" /></div>
 											<span class="title col-xs-12 center-items">Life In Weeks</span>
 										</h1>								
 							</div>
