Change checkbox style

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 							</div>
 							<div class="col-md-6 col-xs-12 custom-mobile-padding">
 								<h2 class="col-xs-12 center-items"> Ideal age
-									<input type="checkbox" name="ideal-age" id="ideal-age" > 
+									<div style="border:1px solid black; width:25px">
+										<input type="checkbox" name="ideal-age" id="ideal-age" > 
+									</div>
 								</h2>
 							</div>
 							<div class="center-items col-xs-12">
