--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								</ul>
 							</div>
 							<ul class="copyright center-items">
-								<li style="color:black!important;font-size:16px">&copy; Shubhankar Ranade</li>
+								<li style="color:black!important;font-size:16px">&copy; Shubhankar Ranade, </li>
 							</ul>
 						</div>
 					</footer>
