--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 								</ul>
 							</div>
 							<ul class="copyright center-items">
-								<li style="color:black!important;font-size:16px">&copy; Shubhankar Ranade, shubhankarranade30@gmail.com / shubhankar@futuras.com</li>
+								<li style="color:black!important;font-size:16px">&copy; Shubhankar Ranade</li>
+								<li style="color:black!important;font-size:16px">&copy; shubhankarranade30@gmail.com / shubhankar@futuras.com</li>
 							</ul>
 						</div>
 					</footer>
